arm64-board: RESOLVED - bridge loads in-process (was confounded by broken rebuilds)
The get-a-real-backtrace retry exposed that my session appspawn-x rebuilds were BROKEN
(src-tree /system/android/framework classpath -> empty bootclasspath -> VM -1; missing
-Xverify:none -> Runtime VerifyError) - breaking the VM BEFORE the bridge load and
confounding all the board-lib-ctor-crash analysis. Using the WORKING appspawn-x backup
+ the MERGED bridge: THE BRIDGE LOADS in-process, framework preload completes, appspawn-x
reaches Ready + event loop, alive. Zero bridge clinit failure, zero reloc errors,
reproducible. Fix = merged aosp .o + -Bsymbolic (no libbase interposition) + skia-codec-
skip. Working combo saved (*.WORKING + *.INPROC_LOADS). Next: aa start -> fork app -> UI.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>